syntax = "proto3";

package disaster;

import "google/protobuf/timestamp.proto";

option go_package = "shared/proto/disaster;disaster";

service DisasterService {
    rpc ReportDisaster (ReportDisasterRequest) returns (ReportDisasterResponse);
    rpc GetDisaster (GetDisasterRequest) returns (GetDisasterResponse);
    rpc ReviewDisaster (ReviewDisasterRequest) returns (ReviewDisasterResponse);
}

message ReviewDisasterRequest {
    string id = 1;
    string adminID = 2;
    string status = 3;
}

message ReviewDisasterResponse {
    string id = 1;
    string status = 2;
}

message ReportDisasterRequest {
    string title = 1;
    string description = 2;
    repeated string tags = 3;
    repeated string imageURLs = 4;
    string contributorID = 5;
    Coordinates location = 6;
}

message Coordinates {
    double latitude = 1;
    double longitude = 2;
}

message ReportDisasterResponse {
    string id = 1;
    string status = 2;
}

message GetDisasterRequest {
    string id = 1;
}

message GetDisasterResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    repeated string tags = 4;
    repeated string imageURLs = 5;
    string contributorID = 6;
    Coordinates location = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
    string status = 10;
    repeated Resource resources = 11;
}

message Resource {
    string id = 1;
    string name = 2;
    string type = 3;
    Coordinates location = 4;
}