syntax = "proto3";

package user;

option go_package = "shared/proto/user;user";

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
    rpc OAuthSignIn (OAuthSignInRequest) returns (LoginUserResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUser (GetUserRequest) returns (User);
}

message OAuthSignInRequest {
    string email = 1;
    string name = 2;
    string avatar_url = 3;
    string role = 4;
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message RegisterUserResponse {
    string id = 1;
    string role = 2;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string token = 1;
    User user = 2;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string avatar_url = 5;
}

message GetUserRequest {
    string id = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    User user = 2;
}